@@ -1,20 +1,25 @@
 #############################################################################
 # Makefile for building: prank
+# Generated by qmake (2.01a) (Qt 4.8.1) on: Fri Jul 13 11:36:21 2012
+# Project:  prank.pro
+# Template: app
+# Command: /usr/bin/qmake-qt4 -spec /usr/share/qt4/mkspecs/linux-g++-64 -o Makefile prank.pro
 #############################################################################
 
 ####### Compiler, tools and options
 
 CC            = gcc
 CXX           = g++
-DEFINES       = 
-CFLAGS        = -m64 -pipe -O2 $(DEFINES)
-CXXFLAGS      = -m64 -pipe -O2 $(DEFINES)
-INCPATH       = -I. -I/usr/include
+DEFINES       = -DQT_WEBKIT
+CFLAGS        = -m64 -pipe -g $(DEFINES)
+CXXFLAGS      = -m64 -pipe -g $(DEFINES)
+INCPATH       = -I/usr/share/qt4/mkspecs/linux-g++-64 -I. -I/usr/include
 LINK          = g++
 LFLAGS        = -m64
-LIBS          = $(SUBLIBS)
+LIBS          = $(SUBLIBS)    
 AR            = ar cqs
 RANLIB        = 
+QMAKE         = /usr/bin/qmake-qt4
 TAR           = tar -cf
 COMPRESS      = gzip -9f
 COPY          = cp -f
@@ -31,7 +36,6 @@ DEL_DIR       = rmdir
 MOVE          = mv -f
 CHK_DIR_EXISTS= test -d
 MKDIR         = mkdir -p
-POD2MAN       = pod2man --utf8 --center "The Probabilistic Alignment Kit" -release="v.120712"
 
 ####### Output directory
 
@@ -69,8 +73,8 @@ SOURCES       = writefile.cpp \
 		ancestralsequence.cpp \
 		ancestralnode.cpp \
 		check_version.cpp \
-                exonerate_reads.cpp \
-                mafft_alignment.cpp
+		exonerate_reads.cpp \
+		mafft_alignment.cpp 
 OBJECTS       = writefile.o \
 		treenode.o \
 		translatesequences.o \
@@ -101,12 +105,27 @@ OBJECTS       = writefile.o \
 		ancestralsequence.o \
 		ancestralnode.o \
 		check_version.o \
-                exonerate_reads.o \
-                mafft_alignment.o
-DESTDIR       =
+		exonerate_reads.o \
+		mafft_alignment.o
+DIST          = /usr/share/qt4/mkspecs/common/unix.conf \
+		/usr/share/qt4/mkspecs/common/linux.conf \
+		/usr/share/qt4/mkspecs/common/gcc-base.conf \
+		/usr/share/qt4/mkspecs/common/gcc-base-unix.conf \
+		/usr/share/qt4/mkspecs/common/g++-base.conf \
+		/usr/share/qt4/mkspecs/common/g++-unix.conf \
+		/usr/share/qt4/mkspecs/qconfig.pri \
+		/usr/share/qt4/mkspecs/modules/qt_phonon.pri \
+		/usr/share/qt4/mkspecs/modules/qt_webkit_version.pri \
+		/usr/share/qt4/mkspecs/features/qt_functions.prf \
+		/usr/share/qt4/mkspecs/features/qt_config.prf \
+		/usr/share/qt4/mkspecs/features/exclusive_builds.prf \
+		/usr/share/qt4/mkspecs/features/default_pre.prf \
+		/usr/share/qt4/mkspecs/features/debug.prf \
+		/usr/share/qt4/mkspecs/features/default_post.prf \
+		prank.pro
+QMAKE_TARGET  = prank
+DESTDIR       = 
 TARGET        = prank
-
-MANPAGES      = prank.1
 
 first: all
 ####### Implicit rules
@@ -130,11 +149,48 @@ first: all
 
 ####### Build rules
 
-
-all: Makefile $(TARGET) $(MANPAGES)
+all: Makefile $(TARGET)
 
 $(TARGET):  $(OBJECTS)  
 	$(LINK) $(LFLAGS) -o $(TARGET) $(OBJECTS) $(OBJCOMP) $(LIBS)
+
+Makefile: prank.pro  /usr/share/qt4/mkspecs/linux-g++-64/qmake.conf /usr/share/qt4/mkspecs/common/unix.conf \
+		/usr/share/qt4/mkspecs/common/linux.conf \
+		/usr/share/qt4/mkspecs/common/gcc-base.conf \
+		/usr/share/qt4/mkspecs/common/gcc-base-unix.conf \
+		/usr/share/qt4/mkspecs/common/g++-base.conf \
+		/usr/share/qt4/mkspecs/common/g++-unix.conf \
+		/usr/share/qt4/mkspecs/qconfig.pri \
+		/usr/share/qt4/mkspecs/modules/qt_phonon.pri \
+		/usr/share/qt4/mkspecs/modules/qt_webkit_version.pri \
+		/usr/share/qt4/mkspecs/features/qt_functions.prf \
+		/usr/share/qt4/mkspecs/features/qt_config.prf \
+		/usr/share/qt4/mkspecs/features/exclusive_builds.prf \
+		/usr/share/qt4/mkspecs/features/default_pre.prf \
+		/usr/share/qt4/mkspecs/features/debug.prf \
+		/usr/share/qt4/mkspecs/features/default_post.prf
+	$(QMAKE) -spec /usr/share/qt4/mkspecs/linux-g++-64 -o Makefile prank.pro
+/usr/share/qt4/mkspecs/common/unix.conf:
+/usr/share/qt4/mkspecs/common/linux.conf:
+/usr/share/qt4/mkspecs/common/gcc-base.conf:
+/usr/share/qt4/mkspecs/common/gcc-base-unix.conf:
+/usr/share/qt4/mkspecs/common/g++-base.conf:
+/usr/share/qt4/mkspecs/common/g++-unix.conf:
+/usr/share/qt4/mkspecs/qconfig.pri:
+/usr/share/qt4/mkspecs/modules/qt_phonon.pri:
+/usr/share/qt4/mkspecs/modules/qt_webkit_version.pri:
+/usr/share/qt4/mkspecs/features/qt_functions.prf:
+/usr/share/qt4/mkspecs/features/qt_config.prf:
+/usr/share/qt4/mkspecs/features/exclusive_builds.prf:
+/usr/share/qt4/mkspecs/features/default_pre.prf:
+/usr/share/qt4/mkspecs/features/debug.prf:
+/usr/share/qt4/mkspecs/features/default_post.prf:
+qmake:  FORCE
+	@$(QMAKE) -spec /usr/share/qt4/mkspecs/linux-g++-64 -o Makefile prank.pro
+
+dist: 
+	@$(CHK_DIR_EXISTS) .tmp/prank1.0.0 || $(MKDIR) .tmp/prank1.0.0 
+	$(COPY_FILE) --parents $(SOURCES) $(DIST) .tmp/prank1.0.0/ && (cd `dirname .tmp/prank1.0.0` && $(TAR) prank1.0.0.tar prank1.0.0 && $(COMPRESS) prank1.0.0.tar) && $(MOVE) `dirname .tmp/prank1.0.0`/prank1.0.0.tar.gz . && $(DEL_FILE) -r .tmp/prank1.0.0
 
 
 clean:compiler_clean 
@@ -320,11 +376,12 @@ progressivealignment.o: progressivealignment.cpp readnewick.h \
 		config.h \
 		hmmodel.h \
 		translatesequences.h \
+		node.h \
+		mafft_alignment.h \
 		hirschberg.h \
 		phylomatchscore.h \
 		terminalsequence.h \
 		readalignment.h \
-		node.h \
 		exonerate_reads.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o progressivealignment.o progressivealignment.cpp
 
@@ -340,7 +397,13 @@ prank.o: prank.cpp progressivealignment.h \
 		site.h \
 		boolmatrix.h \
 		ancestralsequence.h \
+		readfile.h \
+		writefile.h \
+		readnewick.h \
+		guidetree.h \
 		translatesequences.h \
+		node.h \
+		mafft_alignment.h \
 		check_version.h \
 		prank.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o prank.o prank.cpp
@@ -525,17 +588,19 @@ exonerate_reads.o: exonerate_reads.cpp exonerate_reads.h \
 		translatesequences.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o exonerate_reads.o exonerate_reads.cpp
 
-mafft_alignment.o: mafft_alignment.cpp mafft_alignment.h
+mafft_alignment.o: mafft_alignment.cpp mafft_alignment.h \
+		config.h \
+		hmmodel.h \
+		dbmatrix.h \
+		flmatrix.h \
+		intmatrix.h \
+		ancestralnode.h \
+		treenode.h \
+		sequence.h \
+		site.h \
+		boolmatrix.h \
+		ancestralsequence.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o mafft_alignment.o mafft_alignment.cpp
-
-
-####### Manpages
-
-%.1: %.1.pod
-	$(POD2MAN) --section=1 --name="$(shell basename $@ .1 | tr a-z A-Z)" $< >$@
-
-doc: $(MANPAGES)
-
 
 ####### Install
 
