@@ -1,3 +1,8 @@
+v.120716
+- Fixed the translated alignment (been broken in recent clean up)
+- Fixed the output order of ancestral sequences
+
+
 v.120712
 - For codon alignment, MAFFT guide tree now with protein sequences
   (fixes several issues with codon alignment)
